--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^6.0.0",
     "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@phosphor-icons/react": "^2.1.10",
     "antd": "^5.25.2",
     "axios": "^1.9.0",
     "next": "15.1.7",
