--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.25.2",
     "axios": "^1.9.0",
     "next": "15.1.7",
+    "openmeteo": "^1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.85.0",
